# cassettes

./: .gitignore  main.py  pyproject.toml  req.txt
app/: config.py
app/dependency/: container.py
app/services/: __init__.py  auth.py  cassette.py  client.py  client_status.py  employee.py  fine.py  genre.py  penalty_accounting.py  permission.py  position.py  rental.py  tariff.py  tariff_type.py
base/: __init__.py  baseUsecase.py
data/: __init__.py  cassette_data.py  cassette_genre_data.py  database.py  genre_data.py
data/entities/: __init__.py  cassette.py  client.py  client_status.py  employee.py  fine.py  genre.py  penalty_accounting.py  position.py  rental.py  tariff.py  tariff_condition.py  tariff_type.py
data/entity/: __init__.py  cassette.py  genre.py
data/repo/: __init__.py  cassette.py  client.py  client_status.py  employee.py  fine.py  genre.py  penalty_accounting.py  position.py  rental.py  tariff.py  tariff_type.py
gui/: __init__.py  main_window.py
gui/cassette/: __init__.py  model.py  presenter.py  view.py
gui/genre/: __init__.py  model.py  presenter.py  view.py
gui/presenters/: __init__.py  cassette_management.py  client_management.py  client_status_management.py  employee_management.py  fine_management.py  genre_management.py  penalty_management.py  position_management.py  rental_management.py  tariff_management.py  tariff_type_management.py
gui/views/: __init__.py  auth.py  cassette_management.py  client_management.py  employee_management.py  (+10 more)
usecases/: __init__.py  cassette_genre_usecase.py  cassette_usecases.py  genre_usecases.py
(+15 files in other folders)
