[project]
requires-python = ">=3.12"

[tool.black]
line-length = 80
skip-string-normalization = true
skip-magic-trailing-comma = true

exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
include_trailing_comma = true
